# message_wrapper

./: .gitignore  Cargo.toml  setup.py
message_wrapper/: __init__.py  _message_wrapper.py
src/: authentication.rs  lib.rs
src/identity/: authorized_hosts.rs  mod.rs  objects.rs
src/messaging/: mod.rs  objects.rs  wrapper.rs
