[package]
name = "message_wrapper"
version = "0.1.0"
authors = ["jmg292 <jmg292@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.5.1"
rust-crypto = "0.2.36"
libsecp256k1 = "0.3.5"
generic-array = "0.14.3"
global = "0.4.3"
rand = "0.7.3"
rand_hc = "0.2.0"
base64 = "0.12.3"
sha2 = "0.8"
digest = "0.8"
pyo3 = "0.11.1"